--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+.background{
+  background-image: url("../images/math.gif");
+ background-repeat: no-repeat;
+ background-size: cover;
+  padding: 35px;
+  text-align: center;
+  color:green;
+}
+
 .jumbotron{
   font-size: 50px;
   font-family: cursive;
